@@ -2,21 +2,21 @@ package uz.jvh.nextpizza.service;
 
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.HttpStatus;
 
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import uz.jvh.nextpizza.dto.request.UserRequest;
 import uz.jvh.nextpizza.dto.response.UserResponse;
+import uz.jvh.nextpizza.enomerator.ErrorCode;
 import uz.jvh.nextpizza.enomerator.Role;
 import uz.jvh.nextpizza.entity.User;
-import uz.jvh.nextpizza.exception.UserNotFoundException;
+import uz.jvh.nextpizza.exception.NextPizzaException;
 import uz.jvh.nextpizza.repository.OrderRepository;
 import uz.jvh.nextpizza.repository.UserRepository;
 
 
-
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -40,34 +40,28 @@ public class UserService {
     }
 
 
-    public User findByUsername(String username) {
-        User userEntity = userRepository.findByFirstNameAndIsActiveTrue(username)
-                .orElseThrow(() -> new UserNotFoundException("Username " + username + " not found"));
-        return userEntity;
+
+    public List<UserResponse> findByRole(Role role) {
+        return userRepository.findByRoleAndIsActiveTrueOrderByCreatedDesc(role)
+                .stream().map(this::userToResponse).toList();
     }
 
-
-    public List<User> findByRole(Role role) {
-        return userRepository.findByRoleAndIsActiveTrueOrderByCreatedDesc(role);
+    public UserResponse findById(Long id) {
+        User user = userRepository.findById(id).
+                orElseThrow(() -> new NextPizzaException(ErrorCode.USER_NOT_FOUND, "UserId: " + id));
+        return userToResponse(user);
     }
 
-    public User findById(Long id) {
-        return userRepository.findById(id).
-                orElseThrow(() -> new UserNotFoundException("UserId " + id + " not found"));
-    }
-
-    public List<User> findAll() {
-        List<User> allUsers = userRepository.findAllByIsActiveTrueOrderByCreatedDesc();
-
-        return allUsers.stream()
-                .filter(user -> user.getRole().equals(Role.USER))
-                .collect(Collectors.toList());
+    public List<UserResponse> findAll() {
+        return userRepository.findAllByIsActiveTrueOrderByCreatedDesc()
+                .stream().map(this::userToResponse).toList();
     }
 
 
     @Transactional
-    public User update(Long id, UserRequest userRequest) {
-        User user = findById(id);
+    public UserResponse update(Long id, UserRequest userRequest) {
+        User user = userRepository.findById(id).
+                orElseThrow(() -> new NextPizzaException(ErrorCode.USER_NOT_FOUND, "UserId: " + id));
 
         // Password alohida (encoding kerak)
         if (userRequest.getPassword() != null && !userRequest.getPassword().isBlank()) {
@@ -77,11 +71,10 @@ public class UserService {
         // Email uniqueness tekshirish
         if (userRequest.getEmail() != null && !userRequest.getEmail().equals(user.getEmail())) {
             if (userRepository.existsByEmail(userRequest.getEmail())) {
-                throw new RuntimeException("Bu email allaqachon band: " + userRequest.getEmail());
+                throw new NextPizzaException(ErrorCode.EMAIL_ALREADY_EXISTS ,"Email: " + userRequest.getEmail());
             }
             user.setEmail(userRequest.getEmail());
         }
-
 
         // Oddiy fieldlar (Optional bilan qisqaroq)
         Optional.ofNullable(userRequest.getFirstName()).ifPresent(user::setFirstName);
@@ -91,18 +84,12 @@ public class UserService {
         Optional.ofNullable(userRequest.getAddress()).ifPresent(user::setAddress);
         Optional.ofNullable(userRequest.getRole()).ifPresent(user::setRole);
         Optional.ofNullable(userRequest.getPhoneNumber()).ifPresent(user::setPhoneNumber);
-
-        // Role - faqat OWNER o'zgartira oladi (Security tekshirish kerak)
-        if (userRequest.getRole() != null) {
-            // Bu yerda current user role tekshirish kerak
-            user.setRole(userRequest.getRole());
-        }
-        return userRepository.save(user);
+        return userToResponse(userRepository.save(user));
     }
 
-    public Double getUserBalance(Long id) {
+    public BigDecimal getUserBalance(Long id) {
         User user = userRepository.findById(id).
-                orElseThrow(() -> new UserNotFoundException("UserId " + id + " not found"));
+                orElseThrow(() -> new NextPizzaException(ErrorCode.USER_NOT_FOUND ,"UserId: " + id));
         return user.getBalance();
     }
 
@@ -110,13 +97,13 @@ public class UserService {
     @Transactional
     public void deleteUser(Long userId) {
         User user = userRepository.findById(userId).
-                orElseThrow(() -> new UserNotFoundException("UserId " + userId + " not found"));;
+                orElseThrow(() -> new NextPizzaException(ErrorCode.USER_NOT_FOUND ,"UserId: " + userId));;
 
         user.setActive(false);
         userRepository.save(user);
     }
 
-    public User mapRequestToEntity(UserRequest userRequest) {
+    public User mapRequestToUser(UserRequest userRequest) {
         return User.builder()
                 .firstName(userRequest.getFirstName())
                 .lastName(userRequest.getLastName())
@@ -125,22 +112,25 @@ public class UserService {
                 .email(userRequest.getEmail())
                 .birthDate(userRequest.getBirthDate())
                 .phoneNumber(userRequest.getPhoneNumber())
-                .balance(userRequest.getBalance())
                 .build();
 
     }
 
 
-    public UserResponse mapEntityToResponse(User user) {
+    public UserResponse userToResponse(User user) {
         return UserResponse.builder()
-                .uuid(user.getId())
-                .username(user.getUsername())
-                .surname(user.getLastName())
+                .id(user.getId())
+                .firstName(user.getFirstName())
+                .lastName(user.getLastName())
                 .role(user.getRole())
                 .email(user.getEmail())
                 .birthDate(user.getBirthDate())
                 .phoneNumber(user.getPhoneNumber())
-                .createDate(user.getCreated().toLocalDate())
+                .balance(user.getBalance())
+                .address(user.getAddress())
+                .isActive(user.isActive())
+                .enabled(user.isEnabled())
+                .createdDate(user.getCreated())
                 .build();
     }
 
